--- a/package.json
+++ b/package.json
@@ -1,12 +1,20 @@
 {
+  "name": "pkg",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/parvum-lambda/pkg.git"
+  },
+  "version": "0.0.0-development",
   "scripts": {
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "semantic-release": "semantic-release"
   },
   "devDependencies": {
     "@commitlint/cli": "^13.1.0",
     "@commitlint/config-conventional": "^13.1.0",
     "@semantic-release/changelog": "^6.0.2",
     "@semantic-release/git": "^10.0.1",
+    "@semantic-release/npm": "^10.0.3",
     "husky": "^7.0.2",
     "semantic-release": "^20.1.0"
   }
