--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -17,8 +17,8 @@ jobs:
           shell: "/bin/bash"
           name: "Dump version to workspace"
           command: |
-            semantic-release --dry-run 2>&1
-            SEM_RES="$(semantic-release --dry-run 2>&1 | grep -o 'The next release version is .*')"
+            npx semantic-release --dry-run 2>&1
+            SEM_RES="$(npx semantic-release --dry-run 2>&1 | grep -o 'The next release version is .*')"
             NEW_VERSION=${SEM_RES:27}
             echo $SEM_RES
             echo $NEW_VERSION
