--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = pkg
-version =  0.0.0-development
+version = 
 author = kiske
 author_email = maike.704@gmail.com
 description = Parvum service manager
