--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -66,7 +66,10 @@ jobs:
           command: |
             mkdir -p build-workspace
             DIST_FILE=$(ls dist | grep .whl)
-            cp dist/$DIST_FILE build-workspace/
+            ls dist
+            ls dist | grep .whl
+            echo $DIST_FILE
+            cp dist/$DIST_FILE build-workspace/$DIST_FILE
       - persist_to_workspace:
           root: build-workspace
           paths:
