--- a/setup.cfg
+++ b/setup.cfg
@@ -12,6 +12,7 @@ classifiers =
 license_files = LICENSE.txt
 
 [options]
+include_package_data = True
 install_requires =
     PyYAML==6.0
     requests==2.28.2
